--- a/src/test/resources/dataset/QuestionResourceController/questionsWithDateFilter.yml
+++ b/src/test/resources/dataset/QuestionResourceController/questionsWithDateFilter.yml
@@ -44,56 +44,72 @@ question:
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2020-12-13 15:07:52+5:00 #.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 370);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 102
     title: "q2"
     description: "It's Question 2"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2020-12-13 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 370);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 103
     title: "q3"
     description: "It's Question 3"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2020-12-13 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 370);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 104
     title: "q4"
     description: "It's Question 4"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2020-12-13 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 370);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 105
     title: "q5"
     description: "It's Question 5"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2020-12-13 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 370);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 106
     title: "q6"
     description: "It's Question 6"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2021-12-13 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 360);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 107
     title: "q7"
     description: "It's Question 7"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2022-07-23 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 25);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
   - id: 108
     title: "q8"
     description: "It's Question 8"
     is_deleted: false
     user_id: 100
     last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2022-08-14 15:07:52.715570+5:00
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            cal.add(Calendar.DAY_OF_MONTH, -cal.get(Calendar.DAY_OF_MONTH) - 5);                   
+                            return SimpleDateFormat(\"yyyy-MM-dd\").format(cal.getTime());"
 
 question_has_tag:
   - question_id: 101
