--- a/src/test/resources/dataset/testAnswerResourceController/getLastAnswerForWeek/answers.yml
+++ b/src/test/resources/dataset/testAnswerResourceController/getLastAnswerForWeek/answers.yml
@@ -5,7 +5,7 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-07-19 23:41:35.721438
+    persist_date: "groovy: return Calendar.getInstance().getTime();"
     update_date: 2022-07-19 23:41:35.721438
     question_id: 100
     user_id: 100
